src/test/deca/context/valid/class_declvar_meth_int.deca
// Description :
// 
//      Test correct du lexing d'une classe avec une declaration de variable et une méthode int
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 19/06/2023 par gl03

class A {
    int x;
    int incrementX(){
        int y = x=x+1;
        return y;
    }
}
