src/test/deca/context/invalid/object/class_meth_void_with_return_any.deca
//  Description : 
// 
//      Test incorrect qui utilise une methode void avec un return particulier
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {
    int x=3;
    void methodePlusOne(){
        int y= x+1;
        return y;
    }
}